--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.16",
     "@mantine/form": "^7",
     "@phosphor-icons/react": "^2.0.10",
+    "@prisma/client": "^6.3.0",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "^14",
